--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 
 # Profile information
-yourname: Brown Smith  ## put your name
-title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+yourname: Hao-Ning (Howard) Wu  ## put your name
+title: 'NYU CS 2021'  ## your title
+location: New York, NYU
 
 
 ## Social Profiles
-facebook: http://www.facebook.com  ## your facebook account url
-twitter: http://www.twitter.com  ## your twitter account url
-linkedin: http://www.linkedin.com  ## your linkedin account url
-dribbble: http://www.dribble.com  ## you dribbble account url
-foursquare: http://www.foursquare.com  ## your foursquare account url
+github: https://github.com/wuhoward
+#twitter: http://www.twitter.com  ## your twitter account url
+linkedin: https://www.linkedin.com/in/haoningwu/  ## your linkedin account url
+#dribbble: http://www.dribble.com  ## you dribbble account url
+#foursquare: http://www.foursquare.com  ## your foursquare account url
 
 
 
