--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 
 # Profile information
-yourname: Hao-Ning (Howard) Wu  ## put your name
+yourname: Hao-Ning Wu  ## put your name
 title: 'NYU CS 2021'  ## your title
 location: New York, NYU
 
