--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: My Resume
-url: 'http://junlulocky.com'
-baseurl: '/PanelCV' #change it according to your repository name
+url: 'https://wuhoward.github.io'
+baseurl: '/wuhoward.github.io'  #change it according to your repository name
 
 
 
