--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ location: New York, NY
 
 # Conversion
 markdown: kramdown
+mathjax: true
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
-use_math: true
 
 # Markdown Processing
 kramdown:
